# dat310-2023-examproject

./: .gitignore  README.md  app.py  commitlint.config.js  database.db  database_handler.py  json_io.py  package.json  pylintrc  pyproject.toml
report/: draft.txt  examproject.md  report.md
static/: api.js  box.js  form-validation.js  handler.js  imageboard.css  imageboard.html  imageboard.js  index.html  login.html  register.html  script.js  style.css  userRegistration.html
static/prototype/: script.js  style.css  user.html
static/tests/: README  api.html  script.js  style.css
templates/tests/: README  api.html  base.html  form_login.html  form_login_error.html  form_login_success.html  index.html  session_info.html  user_info.html
