# PEP 518 – Specifying Minimum Build System Requirements for Python Projects
# https://peps.python.org/pep-0518/

# PEP 621 – Storing project metadata in pyproject.toml
# https://peps.python.org/pep-0621/

# TOML documentation.
# https://toml.io/en/


# Pylint configuration documentation.
# https://pylint.pycqa.org/en/latest/user_guide/usage/run.html#command-line-options
# https://pylint.pycqa.org/en/latest/user_guide/configuration/all-options.html


# Mypy configuration documentation.
# https://mypy.readthedocs.io/en/stable/config_file.html#config-file
# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
# Disallow dynamic typing.
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

# Untyped definitions and calls.
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and Optional handling.
implicit_optional = false
strict_optional = true

# Configuring warnings.
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Suppressing errors.
ignore_errors = false

# Miscellaneous strictness flags.
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = true
implicit_reexport = false
strict_concatenate = true
strict_equality = true
strict = true

# Configuring error messages.
show_error_context = false
show_column_numbers = false
hide_error_codes = false
pretty = true
color_output = true
error_summary = true
show_absolute_path = false

# Advanced options.
warn_incomplete_stub = true

# Miscellaneous.
warn_unused_configs = true
verbosity = 0

[[tool.mypy.overrides]]
module = [
    'app',
    'database_handler',
]
disallow_any_expr = false

# The following config is equivalent to --strict (as of mypy 1.0):
# https://mypy.readthedocs.io/en/stable/existing_code.html#getting-to-strict

# Start off with these
#warn_unused_configs = true
#warn_redundant_casts = true
#warn_unused_ignores = true

# Getting these passing should be easy
#strict_equality = true
#strict_concatenate = true

# Strongly recommend enabling this one as soon as you can
#check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
#disallow_subclassing_any = true
#disallow_untyped_decorators = true
#disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
#no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
#warn_return_any = true


[tool.pdm]


[project]
name = "imageboard"
version = "0.1.0"
description = "Exam project, asdf group, UiS DAT310 Web Programming 2023."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "No license."}
authors = [
    {name = "wathne", email = "wathne@users.noreply.github.com"},
    {name = "magnusziem", email = "magnus_ziem@outlook.com"},
]
dependencies = [
    "flask>=2.3.2",
]

